frontend/tests/snapshots/functions_list.html.snap
---
source: frontend/tests/integration_test.rs
expression: content
snapshot_kind: text
---
<!DOCTYPE html>
<html lang="en">

<head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Functions List</title>
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
    <link rel="stylesheet" href="../frontend/src/templates/css/style.css">
    <script src="../frontend/src/templates/js/script.js"></script>
</head>

<body>

    <!-- Navbar -->
    <nav class="navbar has-background-link" role="navigation" aria-label="main navigation">
        <div class="navbar-brand">
            <a class="navbar-item" href="index.html">
                <h1 class="title is-4 has-text-white">Static Binary Analysis Report</h1>
            </a>
        </div>
    </nav>

    <!-- Main content -->
    <section class="section">
        <div class="container">

            <div class="buttons">
                <!-- Back to Homepage button -->
                <a href="index.html" class="button is-link is-light">
                    <span class="icon"><i class="fas fa-home"></i></span>
                    <span>Back to Homepage</span>
                </a>
                <!-- To Disassembly view button -->
                <a href="disassembly_view.html" class="button is-link is-light">
                    <span class="icon"><i class="fas fa-code"></i></span>
                    <span>To Disassembly View</span>
                </a>
            </div>

            
            <!-- Search bar -->
            <div class="field">
                <div class="control has-icons-left">
                    <input class="input" type="text" id="searchInput" placeholder="Search for functions..." onkeyup="filterTable()">
                    <span class="icon is-left">
                        <i class="fas fa-search"></i>
                    </span>
                </div>
            </div>

            <!-- Functions List Section -->
            <div class="box">
                <h2 class="title is-4">
                    <span class="icon has-text-info"><i class="fas fa-list-alt"></i></span> Extracted Functions
                </h2>

                <table class="table is-fullwidth is-striped" id="functionsTable">
                    <thead>
                        <tr>
                            <th class="sortable" onclick="sortTable(0)" title="Name of the function">Name <span class="icon"><i class="fas fa-sort"></i></span></th>
                            <th class="sortable" onclick="sortTable(1, 'num')" title="Starting memory address of the function">Start Address <span class="icon"><i class="fas fa-sort"></i></span></th>
                            <th class="sortable" onclick="sortTable(2, 'num')" title="Number of times the function is invoked">Invocation Count <span class="icon"><i class="fas fa-sort"></i></span></th>
                            <th class="sortable" onclick="sortTable(3, 'num')" title="Number of direct calls made by the function">Direct Call <span class="icon"><i class="fas fa-sort"></i></span></th>
                        </tr>
                    </thead>
                    <tbody>
                        <!-- Iterating over the tuple (FUNC, CallTree) dynamically -->
                        
                        <tr>
                            <td class="truncate" title="child21">
                                child21
                            </td>
                            <td>0x4455460</td>
                            <td>0</td>
                            <td>0</td>
                        </tr>
                        
                        <tr>
                            <td class="truncate" title="child2">
                                child2
                            </td>
                            <td>0x4445460</td>
                            <td>0</td>
                            <td>1</td>
                        </tr>
                        
                        <tr>
                            <td class="truncate" title="child11">
                                child11
                            </td>
                            <td>0x4499240</td>
                            <td>0</td>
                            <td>0</td>
                        </tr>
                        
                        <tr>
                            <td class="truncate" title="child12">
                                child12
                            </td>
                            <td>0x4445480</td>
                            <td>0</td>
                            <td>0</td>
                        </tr>
                        
                        <tr>
                            <td class="truncate" title="child1">
                                child1
                            </td>
                            <td>0x4445450</td>
                            <td>0</td>
                            <td>2</td>
                        </tr>
                        
                        <tr>
                            <td class="truncate" title="root">
                                root
                            </td>
                            <td>0x4499220</td>
                            <td>0</td>
                            <td>2</td>
                        </tr>
                        
                    </tbody>
                </table>
            </div>

            <div class="buttons">
                <a href="index.html" class="button is-info is-light">
                    <span class="icon is-small"><i class="fas fa-home"></i></span>
                    <span>Back to Homepage</span>
                <a href="disassembly_view.html" class="button is-link is-light">
                    <span class="icon"><i class="fas fa-code"></i></span>
                    <span>To Disassembly View</span>
                </a>
                </a>


            </div>
        </div>
    </section>

    <!-- Scroll buttons -->
    <div class="scroll-buttons">
        <button onclick="scrollToTop()" class="button is-info">
            Scroll to Top
        </button>
        <button onclick="scrollToBottom()" class="button is-info">
            Scroll to Bottom
        </button>
    </div>

    <!-- Footer -->
    <footer class="footer">
        <div class="content has-text-centered">
            <p>
                <strong>Static Binary Analysis Report</strong> by Giuseppe Marco Bianco. The source code is licensed under <a href="https://github.com/SoftengPoliTo/manifest-producer/blob/main/LICENSE/MIT.txt">MIT</a>.
            </p>
        </div>
    </footer>

</body>

</html>
